# raptor

./: .env.example  .gitignore  CHANGELOG.md  Makefile  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: base.py  critical_reviewer.py  domain_writer.py  observatory.py  production_agent.py  research_strategist.py  structure_architect.py  visual_architect.py
backend/app/core/: config.py  database.py  logging_config.py  telemetry.py
backend/app/db/: schema.sql
backend/app/middleware/: rate_limit.py  security_headers.py
backend/app/models/: __init__.py  constants.py  diagnostic.py  envelope.py  errors.py  pipeline.py  project.py  venue.py
backend/app/routers/: artifacts.py  exports.py  feedback.py  health.py  observatory.py  pipeline.py  projects.py  venues.py
backend/app/services/: artifact_service.py  project_service.py  venue_service.py
backend/app/services/ai/: claude_cli.py  client.py  ollama.py  router.py
backend/app/services/ai/prompts/: base.py
backend/app/services/export/: docx_export.py  markdown_export.py
backend/app/services/pipeline/: diagnostic.py  nda_filter.py  orchestrator.py  remediation.py  sentinel.py  websocket_manager.py
backend/scripts/: arch_lint.py
backend/tests/: conftest.py  test_artifacts.py  test_constants.py  test_exports.py  test_feedback.py  test_health.py  test_library.py  test_models.py  test_nda_filter.py  test_observatory.py  test_pipeline.py  test_projects.py  test_safe_update.py  test_venues.py  test_websocket.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DocumentPreview.tsx  FigurePreview.tsx  Layout.tsx  PipelineMonitor.tsx
frontend/src/data/: about.ts  changelog.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: About.tsx  Dashboard.tsx  Library.tsx  Observatory.tsx  PublicationManager.tsx  VenueManager.tsx  Workspace.tsx
frontend/src/types/: index.ts
